@@ -9,6 +9,7 @@ import static org.junit.Assert.fail;
 import static us.kbase.test.auth2.TestCommon.set;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Base64;
@@ -120,24 +121,24 @@ public class GoogleIdentityProviderTest {
 		final IdentityProvider gip = gc.configure(CFG);
 		assertThat("incorrect provider name", gip.getProviderName(), is("Google"));
 		assertThat("incorrect environments", gip.getEnvironments(), is(set("myenv")));
-		assertThat("incorrect login url", gip.getLoginURL("foo3", false, null),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect login url", gip.getLoginURI("foo3", false, null),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo3&redirect_uri=https%3A%2F%2Fgloginredir.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
-		assertThat("incorrect link url", gip.getLoginURL("foo4", true, null),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect link url", gip.getLoginURI("foo4", true, null),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo4&redirect_uri=https%3A%2F%2Fglinkredir.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
 		
-		assertThat("incorrect login url", gip.getLoginURL("foo3", false, "myenv"),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect login url", gip.getLoginURI("foo3", false, "myenv"),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo3&redirect_uri=https%3A%2F%2Fmygloginred.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
-		assertThat("incorrect link url", gip.getLoginURL("foo4", true, "myenv"),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect link url", gip.getLoginURI("foo4", true, "myenv"),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo4&redirect_uri=https%3A%2F%2Fmyglinkred.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
@@ -149,24 +150,24 @@ public class GoogleIdentityProviderTest {
 		final IdentityProvider gip = new GoogleIdentityProvider(CFG);
 		assertThat("incorrect provider name", gip.getProviderName(), is("Google"));
 		assertThat("incorrect environments", gip.getEnvironments(), is(set("myenv")));
-		assertThat("incorrect login url", gip.getLoginURL("foo5", false, null),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect login url", gip.getLoginURI("foo5", false, null),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo5&redirect_uri=https%3A%2F%2Fgloginredir.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
-		assertThat("incorrect link url", gip.getLoginURL("foo6", true, null),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect link url", gip.getLoginURI("foo6", true, null),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo6&redirect_uri=https%3A%2F%2Fglinkredir.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
 		
-		assertThat("incorrect login url", gip.getLoginURL("foo3", false, "myenv"),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect login url", gip.getLoginURI("foo3", false, "myenv"),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo3&redirect_uri=https%3A%2F%2Fmygloginred.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
-		assertThat("incorrect link url", gip.getLoginURL("foo4", true, "myenv"),
-				is(new URL("https://glogin.com/o/oauth2/v2/auth?" +
+		assertThat("incorrect link url", gip.getLoginURI("foo4", true, "myenv"),
+				is(new URI("https://glogin.com/o/oauth2/v2/auth?" +
 						"scope=profile+email" +
 						"&state=foo4&redirect_uri=https%3A%2F%2Fmyglinkred.com" +
 						"&response_type=code&client_id=gfoo&prompt=select_account")));
